# agentwatch

./: .gitignore  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE  OPTIMIZATION_CHANGES.md  PERFORMANCE_OPTIMIZATION.md  QUICK_TEST_GUIDE.md  README.md  RUN_PERFORMANCE_TEST.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  VALIDATION_CHECKLIST.md  create_spike_scaffold.sh  docker-compose.yml  metrics.json  pytest.ini  render.yaml  requirements-test.txt  run_tests.sh  test_db_performance.py  vercel.json
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile  auth.py  db.py  main.py  otlp.py  requirements.txt
docs/: PRD-AgentWatch-v2.md  PRD-AgentWatch.md  SCAFFOLD_PLAN.md  SECURITY.md  SECURITY_CHANGES.md  SECURITY_QUICK_REFERENCE.md
frontend/: .env.example  Dockerfile  RENDER_FIX.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  vercel.json
frontend/src/: App.tsx  index.css
sdk/: pyproject.toml  setup.py
sdk/agentwatch/: __init__.py  client.py  langchain.py
sdk/agentwatch/patches/: anthropic.py  bedrock.py  openai.py
spike/: .gitignore  README.md  docker-compose.yml
spike/backend/: auth.py  db.py  main.py  otlp.py  requirements.txt
spike/docs/: PHASE0_COMPLETE.txt  README.md  SPIKE_RESULTS.md  SPIKE_RESULTS_SUMMARY.txt
spike/frontend/: index.html
spike/load/: ingest_load.py
spike/sdk/: langchain_callback.py  otel_emitter.py  patch_anthropic.py  patch_bedrock.py  patch_openai_compat.py
tests/: manual_security_test.py  manual_security_test.sh  test_security.py  test_suite.py  validate_security_changes.py
(+22 files in other folders)
